--- a/app/src/main/res/drawable/teacher_tag_common.xml
+++ b/app/src/main/res/drawable/teacher_tag_common.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E51C23" />
+    <solid android:color="@color/colorCourseCardTeacherTag_bg" />
 
     <corners
         android:topLeftRadius="30dp"
