--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/user_name"
-        android:textColor="#FFF"
+        android:textColor="@color/colorUser"
         android:textSize="20sp"
         android:layout_above="@+id/mail"
         android:layout_alignParentStart="true"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/user_mail"
-        android:textColor="#FFF"
+        android:textColor="@color/colorUser"
         android:textSize="20sp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="15dp"
