--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,9 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_path"
+            android:title="@string/nav_path" />
+        <item
+            android:id="@+id/nav_favorite"
+            android:title="@string/nav_favorite" />
+        <item
+            android:id="@+id/nav_bought"
+            android:title="@string/nav_bought" />
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
-            android:title="@string/settings" />
+            android:title="@string/nav_settings" />
     </group>
 
 </menu>
