--- a/app/src/main/res/layout/fragment_classified.xml
+++ b/app/src/main/res/layout/fragment_classified.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent">
 
     <HorizontalScrollView
+        android:id="@+id/course_type_horizontal_scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:scrollbars="none">
 
         <LinearLayout
+            android:id="@+id/course_type_linearlayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
